# html/swagger/api_v1.json
@@ -1504,6 +1504,416 @@
           }
         }
       }
+    },
+    
+    "/technologies": {
+      "get": {
+        "summary": "All technologies for all eras",
+        "description": "Returns full description of all available in-game technologies",
+        "tags": ["Research"],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Technologies",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "train_id": {
+                      "type": "object",
+                      "properties": {
+                        "name": {
+                          "type": "string"
+                        },
+                        "upgrades": {
+                          "type": "object",
+                          "properties": {
+                            "name": {
+                              "type": "string"
+                            },
+                            "type": {
+                              "type": "string"
+                            },
+                            "effect": {
+                              "type": "integer"
+                            },
+                            "price": {
+                              "type": "integer"
+                            },
+                            "research_cost": {
+                              "type": "integer"
+                            }
+                          }
+                        },
+                        "era": {
+                          "type": "integer"
+                        },
+                        "research_cost": {
+                          "type": "integer"
+                        },
+                        "speed": {
+                          "type": "integer"
+                        }, 
+                        "acceleration": {
+                          "type": "integer"
+                        }, 
+                        "endurance": {
+                          "type": "integer"
+                        }, 
+                        "price": {
+                          "type": "integer"
+                        }, 
+                        "waggons": {
+                          "type": "integer"
+                        }, 
+                        "slots": {
+                          "type": "integer"
+                        }, 
+                        "is_passenger": {
+                          "type": "boolean"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": {
+                  "120300": {
+                    "name": "Lynx",
+                    "upgrades": {
+                      "220301": {
+                        "name": "Useful shit",
+                        "type": "waggons",
+                        "effect": "2",
+                        "price": 500000,
+                        "research_cost": 15
+                      }
+                    },
+                    "era": 2,
+                    "research_cost": 30,
+                    "speed": 150,
+                    "acceleration": 5,
+                    "endurance": 60,
+                    "price": 500000,
+                    "waggons": 3,
+                    "slots": 1,
+                    "is_passenger": false
+                  },
+                  "110001": {
+                    "name": "Era 1 coupling",
+                    "era": 1,
+                    "research_cost": 40
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/technologies/points": {
+      "get": {
+        "summary": "Points spent on technologies",
+        "description": "Returns all spent points in research tree",
+        "tags": ["Research"],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Research points spent",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "tech_id": {
+                      "type": "integer"
+                    },
+                    "other_tech_id": {
+                      "type": "integer"
+                    }
+                  }
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": {
+                  "110100": 10,
+                  "210103": 4,
+                  "320402": 1
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/technologies/path/{tech_id}": {
+      "get": {
+        "summary": "Research path to technology",
+        "description": "Returns list of technologies to be researched to get to specified one",
+        "tags": ["Research"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "tech_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Research path",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": [
+                  "210100",
+                  "210101",
+                  "210102",
+                  "210200"
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/research/{tech_id}": {
+      "get": {
+        "summary": "Research technology",
+        "description": "Add points to technology",
+        "tags": ["Research"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "tech_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Research result",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "boolean"
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": true
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/autoresearch": {
+      "get": {
+        "summary": "Display research schedule",
+        "description": "Returns technologies currently in research schedule",
+        "tags": ["Research"],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Research schedule",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": [
+                  "210100",
+                  "210101",
+                  "210102",
+                  "210200"
+                ]
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Clear research schedule",
+        "description": "Returns technologies currently in research schedule (after deleting)",
+        "tags": ["Research"],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Research schedule",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": []
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/autoresearch/{tech_id}": {
+      "post": {
+        "summary": "Schedule researching of technology",
+        "description": "Research technology in background waiting for required science points",
+        "tags": ["Research"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "tech_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Research schedule",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": [
+                  "210100",
+                  "210101",
+                  "210102",
+                  "210200"
+                ]
+              }
+            }
+          }
+        }
+      }
     }
 
   }
